# DittoFS

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.json  CONFLICT_RESOLUTION_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENHANCED_CRDT_IMPLEMENTATION.md  GARBAGE_COLLECTION_IMPLEMENTATION.md  INTEGRITY_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY_FRAMEWORK_IMPLEMENTATION.md  SNAPSHOT_SYSTEM_IMPLEMENTATION.md  VARIABLE_CHUNKING_IMPLEMENTATION.md  VERSIONING_IMPLEMENTATION_SUMMARY.md  demo.sh  docker-compose.dev.yml  pyinstaller.spec  pyproject.toml  requirements.txt  tox.ini
.github/: CI-CD-README.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  release.yml  security-scan.yml
bootstrap/: main.rs
demo/: demo_access_control.py  demo_audit_logging.py  demo_authentication.py  demo_conflict_resolution.py  demo_encryption.py  demo_enhanced_crdt.py  demo_garbage_collection.py  demo_integrity.py  demo_peer_authentication.py  demo_snapshot_system.py  demo_variable_chunking.py  demo_versioning.py
docker/: mosquitto.conf
docs/: DEVELOPMENT.md
packaging/linux/: dittofs.desktop
packaging/macos/: dmg_config.py
packaging/windows/: win_installer.nsi
scripts/: README.md  dev-setup.ps1  dev-setup.py  dev-setup.sh  docker-dev.sh  install.sh  setup-pre-commit.sh  verify-dev-setup.py
src/: gateway.rs  lib.rs  main.rs  metrics.rs  wasm.rs
src/dittofs/: __init__.py  access_control.py  audit_logging.py  authentication.py  ble_peer.py  chunker.py  cli.py  conflict_resolution.py  crdt_store.py  encryption.py  garbage_collector.py  gui.py  hello_dittofs.py  integrity.py  lan_fallback.py  peer_authentication.py  snapshot_system.py  sync_manager.py  transport.py  versioning.py  webrtc_transport.py
src/dittofs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fs/: mod.rs
src/gc/: mod.rs
src/network/: mod.rs  update.rs
src/store/: crypto.rs  mod.rs
tests/: README.md  base_test_classes.py  benchmark.rs  conftest.py  fixtures.py  git_test.rs  mocks.py  sim_pycrdt.py  sync_test.rs  test_access_control.py  test_audit_logging.py  test_authentication.py  test_chunker.py  test_conflict_resolution.py  test_crdt_store.py  test_encryption.py  test_framework_demo.py  test_framework_example.py  test_garbage_collector.py  test_integrity.py  test_peer_authentication.py  test_pycrdt.py  test_runner.py  test_snapshot_system.py  test_utils.py  test_versioning.py
