[package]
name = "dittofs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loro = "1.10"
dashmap = "6.0"
futures = "0.3"
parking_lot = "0.12.5"
libc = "0.2.183"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fuse3 = { version = "0.8.1", features = ["tokio-runtime", "unprivileged"] }
libp2p = { version = "0.54", features = ["tokio", "quic", "macros", "gossipsub", "mdns", "noise", "tcp", "tls", "yamux"] }
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tokio-uring = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
