[package]
name = "dittofs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loro = "1.10"
dashmap = "6.0"
futures = "0.3"
parking_lot = "0.12.5"
libc = "0.2.183"
tokio = { version = "1", features = ["full"] }
tempfile = "3.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
prometheus = "0.14.0"
warp = { version = "0.4.2", features = ["server"] }
lazy_static = "1.5.0"
sha2 = "0.11.0"
hex = "0.4.3"
fastcdc = "4.0.1"
aes-gcm = "0.10.3"
hkdf = "0.13.0"
blake3 = "1.8.5"
rand = "0.8.5"
chrono = "0.4.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fuse3 = { version = "0.8.1", features = ["tokio-runtime", "unprivileged"] }
libp2p = { version = "0.54", features = ["tokio", "quic", "macros", "gossipsub", "mdns", "noise", "tcp", "tls", "yamux", "kad", "identify"] }
sled = "0.34"
tokio-uring = "0.5"

[[bin]]
name = "dittofs-bootstrap"
path = "bootstrap/main.rs"

[[bin]]
name = "dittofs"
path = "src/main.rs"

[[bin]]
name = "dittofs-gateway"
path = "src/gateway.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
