[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dittofs"
version = "0.1.0"
description = "Dropbox without the cloud – peer-to-peer sync"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyfuse3 >= 3.2",
    "trio",
    "blake3",
    "bleak < 0.20.0",
    "bless",
    "pycrdt",
    "qrcode",
    "cryptography >= 41.0.0",
]

[project.optional-dependencies]
gui = ["PyQt6"]
fuse = ["pyfuse3"]
all = ["PyQt6", "pyfuse3", "zeroconf"]
dev = [
    # Testing framework
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21.0",
    "pytest-cov >= 4.0",
    "pytest-mock >= 3.10",
    "pytest-xdist >= 3.0",
    "pytest-timeout >= 2.1",
    "pytest-benchmark >= 4.0",
    "pytest-html >= 4.0",
    "hypothesis >= 6.0",
    
    # Code quality and formatting
    "black >= 23.0",
    "isort >= 5.12",
    "flake8 >= 6.0",
    "flake8-bugbear >= 23.0",
    "flake8-docstrings >= 1.7",
    "flake8-import-order >= 0.18",
    "mypy >= 1.0",
    "types-all >= 1.0",
    
    # Security scanning
    "bandit[toml] >= 1.7",
    "safety >= 3.0",
    "pip-audit >= 2.6",
    
    # Code analysis
    "radon >= 6.0",
    "xenon >= 0.9",
    "mccabe >= 0.7",
    "pydocstyle >= 6.3",
    
    # Coverage and reporting
    "coverage[toml] >= 7.0",
    "codecov >= 2.1",
    
    # Testing utilities
    "factory-boy >= 3.2",
    "freezegun >= 1.2",
    "responses >= 0.23",
    "aioresponses >= 0.7",
    
    # Development tools
    "pre-commit >= 3.0",
    "tox >= 4.0",
    "build >= 1.0",
    "wheel >= 0.42",
]

[project.scripts]
dittofs = "dittofs.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/dittofs",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--timeout=300",
    "-ra",
    "-v",
]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "network: marks tests that require network access",
    "crypto: marks tests that involve cryptographic operations",
    "filesystem: marks tests that interact with the filesystem",
    "unit: marks tests as unit tests",
    "property: marks property-based tests using hypothesis",
    "benchmark: marks performance benchmark tests",
    "security: marks security-related tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/hello_dittofs.py",  # Example/demo code
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "blake3.*",
    "pycrdt.*",
    "pyfuse3.*",
    "bleak.*",
    "bless.*",
    "zeroconf.*",
    "trio.*",
    "qrcode.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
known_first_party = ["dittofs"]
known_third_party = ["pytest", "hypothesis", "trio", "blake3", "pycrdt"]

[tool.bandit]
exclude_dirs = ["tests", "htmlcov", ".pytest_cache", "__pycache__", "build", "dist"]
skips = ["B101", "B601"]  # assert_used, paramiko_calls

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107"]
match_dir = "^(?!tests).*"

[tool.radon]
exclude = "tests/*,htmlcov/*,build/*,dist/*"
show_complexity = true
min = "B"
max = "F"

[tool.xenon]
max_absolute = "B"
max_modules = "B" 
max_average = "A"
exclude = ["tests/*", "htmlcov/*", "build/*", "dist/*"]